# skills

./: .gitignore  .markdownlint-cli2.jsonc  .poutine.yml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  commitlint.config.mjs  conftest.py  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: dependabot.yml  zizmor.yml
.github/workflows/: ci.yml  commit-messages.yml  workflow-lint.yml
plugins/conventional-commits/.claude-plugin/: plugin.json
plugins/conventional-commits/.codex-plugin/: plugin.json
plugins/conventional-commits/skills/conventional-commits/: LICENSE  SKILL.md
plugins/conventional-commits/skills/conventional-commits/references/: type-selection.md
plugins/skill-authoring/.claude-plugin/: plugin.json
plugins/skill-authoring/.codex-plugin/: plugin.json
plugins/skill-authoring/skills/skill-authoring/: LICENSE  SKILL.md
plugins/skill-authoring/skills/skill-authoring/assets/: markdownlint.jsonc
plugins/skill-authoring/skills/skill-authoring/references/: command-portability.md  patterns.md  platform-extensions.md  review-rubric.md  spec-quick-ref.md  trigger-evals.md
plugins/skill-authoring/skills/skill-authoring/scripts/: init_skill.py  skill_budget.py  trigger_eval.py
plugins/skill-authoring/skills/skill-authoring/scripts/skillkit/: __init__.py  frontmatter.py  runtime.py  spec.py
tests/: test_scripts_import.py
tests/conventional_commits/: eval_set.json
tests/skill_authoring/: test_frontmatter.py  test_init_skill.py  test_skill_budget.py  test_trigger_eval.py
